debug broadCast Menu